Update sonar config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magos-ingeniosos-202301-bcn",
+  "name": "wiztragram",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
